@@ -10,6 +10,7 @@
   * Always add :class to nestable_options
   * Refactor Path#update_child_path_column_values
   * Refactor Path#self_and_descendants
+  * Fix descendants sorting for Path
 
 2009-06-14 - Sean Huber (shuber@huberry.com)
   * Update Nestable interface logic
